trying to fix spacing in grid rows for project

--- a/src/sass/partials/base.scss
+++ b/src/sass/partials/base.scss
@@ -31,25 +31,14 @@ body {
   }
 }
 
-.leaf01 {
-  display: block;
-  width: 300px;
-  // position: absolute;
-  z-index: 0;
-  margin: 0 auto;
-  z-index: 0;
-  position: absolute;
-}
-
 .bioInfo {
   width: 500px;
   height: 233.511px;
   margin: 0 auto;
-  z-index: 1;
   background-image: url("/assets/svg/leaf03.svg");
   background-position: center;
   display: flex;
-  align-content: center;
+  align-items: center;
   flex-wrap: wrap;
   // overflow: hidden;
   justify-content: center;
@@ -193,8 +182,8 @@ body {
   // height: 100vh;
   display: grid;
   height: 100vh;
-  gap: 20px;
-  grid-template-rows: auto 3fr auto auto;
+  gap: 40px;
+  grid-template-rows: auto auto auto auto;
   z-index: 0;
   // display: flex;
   // justify-content: space-between;
@@ -203,6 +192,7 @@ body {
 
 .worksTitle {
   color: #fff;
+  height: fit-content;
   // width: 200px;
 
   h2 {
@@ -263,7 +253,7 @@ body {
   width: 100%;
   text-align: center;
   border-radius: 35px;
-  height: fit-content;
+  height: 50px;
   box-sizing: border-box;
   margin: 0 auto;
   z-index: 1;
@@ -281,7 +271,8 @@ body {
   // margin: 0 auto;
   // width: 800px;
   // width: 50vw;
-  margin: auto;
+  margin: 0 auto;
+  align-self: center;
 
   .homeImage {
     width: 100%;
@@ -326,10 +317,16 @@ body {
   margin: 5px 0 5px 5px;
 }
 
+.placeholder {
+  height: 100vh;
+  z-index: -1;
+}
+
 #about {
-  min-height: 600px;
+  min-height: 100vh;
   background-color: #fafffa;
-  position: relative;
+  position: sticky;
+  z-index: 99999;
 
   h1 {
     border-bottom: solid 1px red;
@@ -384,6 +381,7 @@ footer {
   background-color: black;
   height: 200px;
   position: relative;
+  z-index: 99;
 
   ul {
     padding: 20px;
@@ -409,6 +407,12 @@ footer {
   }
 }
 
+// @media screen and (max-height: 530px) {
+//   .project {
+//     grid-template-rows: auto 2fr auto auto;
+//   }
+// }
+
 @media screen and (min-width: 530px) {
   .worksTitle {
     display: flex;
@@ -427,6 +431,14 @@ footer {
 
   .worksButton {
     width: 490px;
+  }
+}
+
+@media screen and (min-width: 730px) {
+  .worksImage {
+    .homeImage {
+      width: 690px;
+    }
   }
 }
 
